# foam_standards

./: .gitattributes  .gitignore  README.md  baseline_pass3.py  baseline_pass_eval.py  benchmark.py  benchmark_advanced.py  benchmark_basic.py  benchmark_finetuned.py  benchmark_utils.py  consolidate_dataset.py  dataset.md  experiment.md  foambench_main.py  grouping_A_finetuned_models.json  grouping_B_C_E2_pass_eval_summary.txt  grouping_B_finetuned_models.json  grouping_C_finetuned_models.json  grouping_C_vs_E2_summary.txt  grouping_D_finetuned_models.json  grouping_E2_finetuned_models.json  grouping_baseline_pass3_models.json  grouping_benchmark_success_summary.txt  grouping_unified_nemo_models.json  nmse_advanced.py  nmse_basic.py  pass_eval.py  pyproject.toml  run_baseline_all_finetuned.sh  run_baseline_pass3_benchmark.sh  run_benchmark.sh  run_benchmark.slurm  run_benchmark_33.slurm  run_grouping_A_benchmark.sh  run_grouping_B_benchmark.sh  run_grouping_C_benchmark.sh  run_grouping_D_benchmark.sh  run_grouping_E2_benchmark.sh  run_qwen3.5-35b-a3b-hf.slurm  run_qwen3.5-35b-a3b-vllm.slurm  (+5 more)
9-substeps-exp/: README.md  cleanup_single_knockout.sh  finetuned_models.json  run_9substeps_all_finetuned.sh  run_all_in_one.sh  run_all_one_command.sh  run_no_similar_allrun_commands.sh  run_single_knockout_loop.sh  run_single_knockout_one.sh  run_split_lora_servers.sh  start_vllm_lora_5models.sh
9-substeps-exp/single_knockout_configs/: README.txt  knockout_allrun_commands.json  knockout_allrun_script.json  knockout_build_advice.json  knockout_decompose_subtasks.json  knockout_error_analysis.json  knockout_generate_file.json  knockout_parse_case_info.json  knockout_rewrite_files.json  knockout_rewrite_plan.json  two_base_build_advice_allrun_commands.json
Dataset/: FoamBench_advanced.json  FoamBench_basic.json
Dataset/Advanced/Cavity_LES/: usr_requirement.txt
Dataset/Advanced/Cavity_SA/: usr_requirement.txt
Dataset/Advanced/Cavity_SA/GT_Files/: Allrun
Dataset/Advanced/Cavity_geometry_1/: usr_requirement.txt
Dataset/Advanced/Cylinder_LES/: usr_requirement.txt
Dataset/Advanced/Cylinder_SA/: usr_requirement.txt
Dataset/Advanced/Diamond_Obstacle_KOMEGASST/: usr_requirement.txt
Dataset/Advanced/Diamond_Obstacle_SA/: usr_requirement.txt
Dataset/Advanced/Double_Square_SA/: usr_requirement.txt
Dataset/Advanced/Rectangular_Obstacle_KOMEGASST/: usr_requirement.txt
Dataset/Advanced/Rectangular_Obstacle_KOMEGASST/GT_Files/: Allrun
Dataset/Advanced/Rectangular_Obstacle_SA/: usr_requirement.txt
Dataset/Advanced/counterFlowFlame2D_KE/: usr_requirement.txt
Dataset/Advanced/counterFlowFlame2D_SA/: usr_requirement.txt
Dataset/Advanced/nozzleFlow2D_SA/: usr_requirement.txt
Dataset/Advanced/obliqueShock_KE/: usr_requirement.txt
Dataset/Advanced/obliqueShock_LES/: usr_requirement.txt
Dataset/Advanced/wedge_SA/: usr_requirement.txt
Dataset/Basic/BernardCells/1/: usr_requirement.txt
Dataset/Basic/BernardCells/2/: usr_requirement.txt
Dataset/Basic/BernardCells/3/: usr_requirement.txt
Dataset/Basic/Cavity/1/: usr_requirement.txt
Dataset/Basic/Cavity/2/: usr_requirement.txt
Dataset/Basic/Cavity/3/: usr_requirement.txt
Dataset/Basic/Cylinder/1/: usr_requirement.txt
Dataset/Basic/Cylinder/2/: usr_requirement.txt
Dataset/Basic/Cylinder/3/: usr_requirement.txt
Dataset/Basic/counterFlowFlame2D/1/: usr_requirement.txt
Dataset/Basic/counterFlowFlame2D/2/: usr_requirement.txt
Dataset/Basic/counterFlowFlame2D/3/: usr_requirement.txt
Dataset/Basic/damBreakWithObstacle/1/: usr_requirement.txt
Dataset/Basic/damBreakWithObstacle/2/: usr_requirement.txt
Dataset/Basic/damBreakWithObstacle/3/: usr_requirement.txt
Dataset/Basic/forwardStep/1/: usr_requirement.txt
Dataset/Basic/forwardStep/2/: usr_requirement.txt
Dataset/Basic/forwardStep/3/: usr_requirement.txt
Dataset/Basic/obliqueShock/1/: usr_requirement.txt
Dataset/Basic/obliqueShock/2/: usr_requirement.txt
Dataset/Basic/obliqueShock/3/: usr_requirement.txt
Dataset/Basic/pitzDaily/1/: usr_requirement.txt
Dataset/Basic/pitzDaily/2/: usr_requirement.txt
Dataset/Basic/pitzDaily/3/: usr_requirement.txt
Dataset/Basic/shallowWaterWithSquareBump/1/: usr_requirement.txt
Dataset/Basic/shallowWaterWithSquareBump/2/: usr_requirement.txt
Dataset/Basic/shallowWaterWithSquareBump/3/: usr_requirement.txt
Dataset/Basic/squareBend/1/: usr_requirement.txt
database/raw/: openfoam_allrun_scripts.txt  openfoam_case_stats.json  openfoam_command_help.txt  openfoam_commands.txt  openfoam_tutorials_details.txt  openfoam_tutorials_structure.txt
experiment-finetuned/single_knockout/: ablation_study_summary.txt  failure_reason_reclass_by_outputtxt.txt  knockout_outputtxt_failure_explanations.txt  knockout_success_failure_summary.txt
experiment-finetuned/single_knockout/baseline_all_finetuned/: model_config.json
experiment-finetuned/single_knockout/knockout_allrun_commands/: model_config.json
experiment-finetuned/single_knockout/knockout_allrun_script/: model_config.json
experiment-finetuned/single_knockout/knockout_build_advice/: model_config.json
experiment-finetuned/single_knockout/knockout_decompose_subtasks/: model_config.json
experiment-finetuned/single_knockout/knockout_error_analysis/: model_config.json
experiment-finetuned/single_knockout/knockout_generate_file/: model_config.json
experiment-finetuned/single_knockout/knockout_parse_case_info/: model_config.json
experiment-finetuned/single_knockout/knockout_rewrite_files/: model_config.json
experiment-finetuned/single_knockout/knockout_rewrite_plan/: model_config.json
experiment-finetuned/single_knockout/two_base_build_advice_allrun_commands/: model_config.json
qwen-benchmark/: summary.json
qwen-standard/: summary.json
qwen3.5-35b-benchmark/: summary.json
secrets/: openai_env.sh
src/: config.py  main.py  router_func.py  utils.py
src/nodes/: input_writer_node.py  reviewer_node.py
src/services/: __init__.py  input_writer.py  mesh.py  plan.py  review.py  run_hpc.py  visualization.py
(+17679 files in other folders)
