[project]
name = "agent"
version = "0.1.0"
description = "Foam-Agent benchmark environment managed by uv"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate==1.2.1",
  "aiohappyeyeballs==2.4.6",
  "aiohttp==3.11.12",
  "airportsdata==20250224",
  "annotated-types==0.7.0",
  "anthropic==0.45.2",
  "anyio==4.8.0",
  "argon2-cffi-bindings==21.2.0",
  "argon2-cffi==23.1.0",
  "arrow==1.3.0",
  "astor==0.8.1",
  "asttokens==3.0.0",
  "async-lru==2.0.4",
  "authlib==1.6.5",
  "babel==2.17.0",
  "beartype==0.22.4",
  "beautifulsoup4==4.13.3",
  "bitsandbytes==0.45.3",
  "blake3==1.0.4",
  "bleach==6.2.0",
  "boto3==1.37.1",
  "botocore==1.37.1",
  "cachetools==6.2.1",
  "cffi==2.0.0",
  "click==8.1.8",
  "cloudpickle==3.1.1",
  "comm==0.2.2",
  "compressed-tensors==0.9.1",
  "cryptography==46.0.3",
  "cupy-cuda12x==13.4.1",
  "cyclopts==4.0.0",
  "dataclasses-json==0.6.7",
  "debugpy==1.8.13",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "deprecated==1.2.18",
  "depyf==0.18.0",
  "dill==0.4.0",
  "diskcache==5.6.3",
  "distro==1.9.0",
  "dnspython==2.7.0",
  "docstring-parser==0.17.0",
  "docutils==0.22.2",
  "einops==0.8.1",
  "email-validator==2.2.0",
  "exceptiongroup==1.3.0",
  "executing==2.2.0",
  "faiss-cpu==1.10.0",
  "fastapi==0.115.12",
  "fastapi-cli==0.0.7",
  "fastjsonschema==2.21.1",
  "fastmcp==2.13.0.1",
  "fastrlock==0.8.3",
  "fqdn==1.5.1",
  "gitingest==0.1.2",
  "gguf==0.10.0",
  "googleapis-common-protos==1.70.0",
  "greenlet==3.1.1",
  "grpcio==1.71.0",
  "h11==0.14.0",
  "hf-xet==1.0.3",
  "httpcore==1.0.7",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "httpx-sse==0.4.0",
  "huggingface-hub==0.30.2",
  "imageio==2.37.0",
  "importlib-metadata==8.0.0",
  "iniconfig==2.1.0",
  "interegular==0.3.3",
  "ipycanvas==0.13.3",
  "ipyevents==2.0.2",
  "ipykernel==6.29.5",
  "ipython==9.0.2",
  "ipython-genutils==0.2.0",
  "ipython-pygments-lexers==1.1.1",
  "ipyvtklink==0.2.3",
  "ipywidgets==7.8.5",
  "isodate==0.7.2",
  "isoduration==20.11.0",
  "jaraco-classes==3.4.0",
  "jaraco-context==6.0.1",
  "jaraco-functools==4.3.0",
  "jedi==0.19.2",
  "jeepney==0.9.0",
  "jiter==0.8.2",
  "jmespath==1.0.1",
  "joblib==1.4.2",
  "json5==0.10.0",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-path==0.3.4",
  "jsonschema-specifications==2024.10.1",
  "jupyter-client==8.6.3",
  "jupyter-core==5.7.2",
  "jupyter-events==0.12.0",
  "jupyter-lsp==2.2.5",
  "jupyter-server==2.15.0",
  "jupyter-server-terminals==0.5.3",
  "jupyterlab==4.3.5",
  "jupyterlab-pygments==0.3.0",
  "jupyterlab-server==2.27.3",
  "jupyterlab-widgets==1.1.11",
  "keyring==25.6.0",
  "langchain==0.3.18",
  "langchain-anthropic==0.2.4",
  "langchain-aws==0.2.13",
  "langchain-community==0.3.17",
  "langchain-core==0.3.54",
  "langchain-experimental==0.3.4",
  "langchain-huggingface==0.1.2",
  "langchain-ollama==0.3.2",
  "langchain-openai==0.2.14",
  "langchain-text-splitters==0.3.6",
  "langgraph==0.2.71",
  "langgraph-checkpoint==2.0.12",
  "langgraph-sdk==0.1.51",
  "langserve==0.3.1",
  "langsmith==0.3.8",
  "lark==1.2.2",
  "lazy-object-proxy==1.12.0",
  "llguidance==0.7.16",
  "llvmlite==0.43.0",
  "lm-format-enforcer==0.10.11",
  "markdown-it-py==3.0.0",
  "marshmallow==3.26.1",
  "matplotlib-inline==0.1.7",
  "mcp==1.19.0",
  "mdurl==0.1.2",
  "mistral-common==1.5.4",
  "mistune==3.1.2",
  "more-itertools==10.8.0",
  "msgspec==0.19.0",
  "mypy-extensions==1.0.0",
  "nbclient==0.10.2",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "ninja==1.11.1.4",
  "notebook==7.3.2",
  "notebook-shim==0.2.4",
  "numba==0.60.0",
  "numpy==1.26.4",
  "nvidia-cublas-cu12==12.4.5.8",
  "nvidia-cuda-cupti-cu12==12.4.127",
  "nvidia-cuda-nvrtc-cu12==12.4.127",
  "nvidia-cuda-runtime-cu12==12.4.127",
  "nvidia-cudnn-cu12==9.1.0.70",
  "nvidia-cufft-cu12==11.2.1.3",
  "nvidia-curand-cu12==10.3.5.147",
  "nvidia-cusolver-cu12==11.6.1.9",
  "nvidia-cusparse-cu12==12.3.1.170",
  "nvidia-cusparselt-cu12==0.6.2",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.4.127",
  "nvidia-nvtx-cu12==12.4.127",
  "ollama==0.4.8",
  "openai==1.61.1",
  "openapi-core==0.19.5",
  "openapi-pydantic==0.5.1",
  "openapi-schema-validator==0.6.3",
  "openapi-spec-validator==0.7.2",
  "opencv-python-headless==4.11.0.86",
  "opentelemetry-api==1.26.0",
  "opentelemetry-exporter-otlp==1.26.0",
  "opentelemetry-exporter-otlp-proto-common==1.26.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.26.0",
  "opentelemetry-exporter-otlp-proto-http==1.26.0",
  "opentelemetry-proto==1.26.0",
  "opentelemetry-sdk==1.26.0",
  "opentelemetry-semantic-conventions==0.47b0",
  "opentelemetry-semantic-conventions-ai==0.4.3",
  "orjson==3.10.15",
  "outlines==0.1.11",
  "outlines-core==0.1.26",
  "overrides==7.7.0",
  "pandas==2.3.1",
  "pandocfilters==1.5.1",
  "parse==1.20.2",
  "parso==0.8.4",
  "partial-json-parser==0.2.1.1.post5",
  "pathable==0.4.4",
  "pathvalidate==3.3.1",
  "pexpect==4.9.0",
  "pluggy==1.5.0",
  "prometheus-client==0.21.1",
  "prometheus-fastapi-instrumentator==7.1.0",
  "prompt-toolkit==3.0.50",
  "protobuf==4.25.6",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "py-cpuinfo==9.0.0",
  "py-key-value-aio==0.2.8",
  "py-key-value-shared==0.2.8",
  "pycountry==24.6.1",
  "pydantic==2.12.3",
  "pydantic-core==2.41.4",
  "pydantic-settings==2.7.1",
  "pygments==2.19.1",
  "pyperclip==1.11.0",
  "pytest==8.3.5",
  "python-dotenv==1.2.1",
  "python-json-logger==3.3.0",
  "python-multipart==0.0.20",
  "pytz==2025.2",
  "pyvistaqt==0.11.2",
  "pyyaml==6.0.2",
  "pyzmq==26.2.1",
  "qtpy==2.4.3",
  "ray==2.40.0",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "requests-toolbelt==1.0.0",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rich==14.0.0",
  "rich-rst==1.3.2",
  "rich-toolkit==0.14.1",
  "rpds-py==0.23.1",
  "s3transfer==0.11.2",
  "safetensors==0.5.3",
  "scikit-learn==1.6.1",
  "scipy==1.15.2",
  "secretstorage==3.4.0",
  "send2trash==1.8.3",
  "sentencepiece==0.2.0",
  "shellingham==1.5.4",
  "sniffio==1.3.1",
  "soupsieve==2.6",
  "sqlalchemy==2.0.38",
  "sse-starlette==3.0.2",
  "stack-data==0.6.3",
  "starlette==0.46.2",
  "sympy==1.13.1",
  "tenacity==9.0.0",
  "terminado==0.18.1",
  "threadpoolctl==3.5.0",
  "tiktoken==0.8.0",
  "tinycss2==1.4.0",
  "tokenizers==0.21.1",
  "torchaudio==2.5.1",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "transformers==4.51.3",
  "triton==3.1.0",
  "typer==0.15.2",
  "types-python-dateutil==2.9.0.20241206",
  "typing-extensions==4.15.0",
  "typing-inspect==0.9.0",
  "typing-inspection==0.4.2",
  "tzdata==2025.2",
  "uri-template==1.3.0",
  "uvicorn==0.34.1",
  "uvloop==0.21.0",
  "vllm==0.7.3",
  "vtk==9.3.1",
  "watchfiles==1.0.5",
  "wcwidth==0.2.13",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "websockets==15.0.1",
  "werkzeug==3.1.1",
  "widgetsnbextension==3.6.10",
  "wrapt==1.17.2",
  "xformers==0.0.28.post3",
  "xgrammar==0.1.11",
  "zipp==3.21.0",
  "zstandard==0.23.0",
]

[tool.uv]
# no special config; keep explicit for future tweaks

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
